Fix white space

--- a/indico/modules/events/timetable/client/js/UnscheduledContributions.module.scss
+++ b/indico/modules/events/timetable/client/js/UnscheduledContributions.module.scss
@@ -20,9 +20,7 @@
     -webkit-box-shadow: none;
     margin: 0;
   }
-}
 
-.contributions-container {
   position: sticky;
   top: 0;
   padding: 1rem 0 1rem 0.5rem;
@@ -36,9 +34,7 @@
   overflow-x: hidden;
   border-left: 1px solid $raincloud-gray;
 
-
   .content {
-    
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -152,11 +148,11 @@
 }
 
 .title {
-    margin-bottom: 0;
-    font-size: 1.125rem;
-    font-weight: bold;
-    padding: 0 1rem;
-  }
+  margin-bottom: 0;
+  font-size: 1.125rem;
+  font-weight: bold;
+  padding: 0 1rem;
+}
 
 .pane-resize-handle {
   width: 12px;
@@ -180,7 +176,7 @@
     align-items: center;
   }
 
-  :global(.menu .item:is(.active, .selected)){
+  :global(.menu .item:is(.active, .selected)) {
     background: #eef6fa !important;
     font-weight: bold;
   }
@@ -254,7 +250,7 @@
     background: linear-gradient(
       90deg,
       rgba(255, 255, 255, 0) 32%,
-      rgba(255, 255, 255, 1) 66%,
+      rgba(255, 255, 255, 1) 66%
     );
   }
 
@@ -361,7 +357,7 @@
   .filter-cross {
     display: inline;
 
-    :global(.close.icon).filter-cross{
+    :global(.close.icon).filter-cross {
       margin: 0;
     }
   }
